[package]
name = "firebase-admin-auth-rs"
version = "0.1.0"
authors = ["hkws <hkws0130@gmail.com>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/hkws/firebase-admin-auth-rs"
keywords = ["firebase", "token", "validate"]
license-file = "LICENSE"
readme = "README.md"
description = "A firebase ID token validator written in Rust."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "7.1.1"
reqwest = { version = "0.11.6", features = ["json"] }
hyper = { version = "0.14.15" }
log = "0.4"
tokio = { version = "1.14.0", features = ["rt", "time", "macros"] }
async-trait = "0.1.52"

[dev-dependencies]
actix-web = "4.0.0-beta.12"
futures-util = "0.3.12"
actix-files = "0.6.0-beta.9"
env_logger = "0.7"
actix-cors = "0.5.3"
wiremock = "0.5"
dotenv = "0.15.0"
# mockall = "0.11.0"
# mockall_double = "0.1.0"
# openssl = "0.10.38"
# base64 = "0.13.0"
# num = "0.4.0"
# jsonwebkey-convert = { version="0.3.0", features = ["pem_support"] }
# jsonwebkey = { version = "0.3.4", features = ["generate", "jwt-convert"] }